typos, fixed some widows/orphans, some exercises for §34

--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -488,10 +488,10 @@ A relation on a domain $D$ is \define{total} iff for any $x$ and $y$ in $D$, eit
 \end{itemize}An order that is not total is commonly called a \define{partial order}.}
 An order, as the name suggests, gives a particular kind of structure to a domain. A strict total order arranges everything in the domain in an order without any ties; an example would be the greater than relation $>$ we considered above. A non-mathematical example might be `\gap{1} is taller than \gap{2}', which arranges the domain of people in a linear way from tallest to shortest. If there are ties permitted, then the relation is  not strict: a total order with ties is $≥$ on the natural numbers, or the relation `\gap{1} is no shorter than \gap{2}', which allows that whatever fills the first slot might be either taller than, or the same height as, whatever fills the second. 
 
-If not everything in the domain is ordered with respect to each other, the relation is partial. Perhaps not everything in the domain is comparable. Suppose we are considering a railway network, in which all lines radiate from a central station, like the Adelaide Metro network.  The relation `\gap{1} is no further along the line than \gap{2}' is a partial order.\footnote{Every station is no further along than itself; pick any two distinct stations, such as Woodville and Kilkenny: if Kilkenny is no further along than Woodville, then Woodville is further along than Kilkenny; and if we pick three stations, such as Oaklands, Brighton and Seacliff, then since Oaklands is no further than Brighton, and Bright is no further than Seacliff, it follows that Oaklands is no further than Seacliff.} But there are many pairs of incomparable stations: Woodville is not on the same line as Oaklands, so neither is further along the line than the other. (We could create a total order, perhaps by measuring distance or counting stations along the line, and say that two stations are equally far away iff they are the same number of stops from Adelaide. But we are focussed here on the partial order induced by the actual railway network.) A strict partial order would be `\gap{1} is further along the line than \gap{2}', which excludes ties. 
+If not everything in the domain is comparable, or ordered with respect to each other, the relation is partial. Consider a railway network, in which all lines radiate from a central station, like the Adelaide Metro network.  The relation `\gap{1} is no further along the line than \gap{2}' is a partial order.\footnote{Every station is no further along than itself; pick any two distinct stations, such as Woodville and Kilkenny: if Kilkenny is no further along than Woodville, then Woodville is further along than Kilkenny; and if we pick three stations, such as Oaklands, Brighton and Seacliff, then since Oaklands is no further than Brighton, and Bright is no further than Seacliff, it follows that Oaklands is no further than Seacliff.} But there are many pairs of incomparable stations: Woodville is not on the same line as Oaklands, so neither is further along the line than the other. (We could create a total order, perhaps by measuring distance or counting stations along the line, and say that two stations are equally far away iff they are the same number of stops from Adelaide. But we are focussed here on the partial order induced by the actual railway network.) A strict partial order would be `\gap{1} is further along the line than \gap{2}', which excludes ties. 
 
-A mathematical example of a partial order is the subset relation $\subseteq$. Consider some set $X$ which contains just $a$ and $b$ as members. Recall from §\ref{euler} that the subsets of a given set $X$ are those sets such that everything in them is also in $X$. So $X$ is itself a subset of $X$; so is the set just containing $a$, and the set just containing $b$. Finally, the empty set (with no members) obviously is a subset of any set (everything in it is – trivially! – in every other set). That gives the structure of subsets depicted in Figure~\ref{fig:sbst}. The corresponding strict partial order $\subset$ results from removing any loops from a set to itself in that diagram.
- \begin{figure}[t]
+A mathematical example of a partial order is the subset relation $\subseteq$. Consider some set $X$ containing just $a$ and $b$ as members. Recall from §\ref{euler} that the subsets of $X$ are those sets such that everything in them is also in $X$. So $X$ is a subset of $X$, as is the set just containing $a$, and the set just containing $b$. Finally, the empty set (with no members) obviously is a subset of any set (trivially – nothing in it is absent from any other set). That gives the structure of subsets depicted in Figure~\ref{fig:sbst}. The corresponding strict partial order $\subset$ results from removing any loops from a set to itself in that diagram.
+ \begin{figure}
  \begin{tikzpicture}
  \node (ab) at (3,3) {$\{a,b\}$};
 \node (b) at (0,1.5) {$\{b\}$};
@@ -1251,7 +1251,6 @@ Show that each of the following is neither a logical truth nor a logical falseho
 \end{earg}
 
 
-\solutions
 \problempart
 \label{pr.NotEquiv}
 Show that the following pairs of sentences are not logically equivalent.
